<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="iut.chaos.activity.Welcome">

    <TextView
        android:id="@+id/homeHello"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/welcome_title"
        android:textAlignment="center"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/whatWeDo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homeHello"
        android:layout_marginTop="32dp"
        android:layout_margin="20dp"
        android:text="@string/welcome_txtIntro"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/joinUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/whatWeDo"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_txtJoinUs"
        android:textAlignment="center" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/whatWeDo"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        android:onClick="register"
        android:text="@string/welcome_btnRegister"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="321dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/logIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_txtLogin" />

        <TextView
            android:id="@+id/connexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="connect"
            android:text="@string/welcome_btnLogin"
            android:textColor="@android:color/holo_blue_dark" />

    </LinearLayout>

</RelativeLayout>
